--- a/meta/intro.org
+++ b/meta/intro.org
@@ -112,17 +112,16 @@ n  -- to ignore the local variables list.
  if you had typed =!= to avoid the first question everytime. Sorry! It's a good
  security design, which you should not attempt to circumvent.)
 
- This automatic loading happens because of the =Local Variables= section found
- at the very bottom of this file under the =Footnotes= section (not visible in
- HTML export). The =Local Variables= is a formal way to inform Emacs that you
+ This automatic loading happens because of the =Local Variables= found at the
+ top of the file. The =Local Variables= is a formal way to inform Emacs that you
  would like to run some code when the file is opened. It could be dangerous to
  do this in some situations, so it's a good thing that Emacs asked you this
  question! In this case, it is setting up to run the code block found in this
  file named =k3s-org-emacs-load=, in order to enable automatic HTML export
  whenever you save this file, as well as a few other fixes for things. If you
  don't desire this behaviour, remove the =eval= line from the =Local Variables=
- section at the bottom of the =Footnotes= section, and you will no longer see
- this message on load.
+ section at the top of the file, and you will no longer see this message on
+ load.
 
  When you opened this file, it should have automatically loaded in =Org= mode
  (or you might need to run =M-x org-mode=). 
@@ -212,9 +211,8 @@ form.
 In org-mode, you can export the current document as a single HTML page, with the
 builtin org-mode exporter: type =C-c C-e h-h= or run =M-x
 org-html-export-to-html=. However, in this file, it is setup automatically to
-export HTML whenever the file is saved, see the =Footnotes= section. You can
-toggle this behaviour on and off, by executing =M-x
-toggle-org-html-export-on-save=.
+export HTML whenever the file is saved, see =Local Variables=. You can toggle
+this behaviour on and off, by executing =M-x toggle-org-html-export-on-save=.
 
 Normally, org-mode runs all of the code blocks in the file, every single time
 you export. This is undesirable in this case, as the setup code only needs to
@@ -332,8 +330,7 @@ git clone https://github.com/EnigmaCurry/literate-k3s.git \
 Open =${HOME}/git/literate-k3s/k3s.org= inside of Emacs.
 
 (You should always open =k3s.org= first, because it loads some Emacs
-configuration when it loads that other files rely upon. See the =Footnotes=
-section.)
+configuration when it loads that other files rely upon. See =Local Variables=.)
 
  * Find the [[Core Config][Core Config]] section.
  * You should review all of the core config code blocks, and edit them
