--- a/lib/sealed_secrets.org
+++ b/lib/sealed_secrets.org
@@ -1,11 +1,10 @@
-* Sealed Secrets
 This Org file is not an appropriate place to store private things like passwords
 or API tokens, because it may accidentally be published to the web. These things
 should be stored in Secrets, controlled only by your cluster. To keep secrets
 local to this config, the use of [[https://github.com/bitnami-labs/sealed-secrets][Sealed Secrets]] allows us to store an encrypted
 copy of the secrets in our git repository. Only the cluster can decrypt sealed
 secrets.
-** Install bitnami-labs/sealed-secrets to the cluster
+* Install bitnami-labs/sealed-secrets to the cluster
 You should have already installed the command line client (See =Workstation
 Tools=). Now it's time to install the cluster side portion:
 
