--- a/clusters/k3s.example.com/k3s.example.com.org
+++ b/clusters/k3s.example.com/k3s.example.com.org
@@ -9,16 +9,6 @@
 # eval: (progn (load-file "../../meta/org-meta.el"))
 # End:
 
-* Create directories
-Create all of the directories necessary for tangling this config. (These are always re-iterated
-in the individual configs, but this gets you going quicker):
-
-#+begin_src shell :noweb yes :eval never-export :exports code
-mkdir -p <<SRC_DIR>>/kube-system/traefik
-mkdir -p <<SRC_DIR>>/git-system/gitea
-mkdir -p <<SRC_DIR>>/flux-system
-#+end_src
-
 * Core Config
 ** CLUSTER
   =CLUSTER= is the domain name of your cluster:
@@ -60,13 +50,111 @@ ${HOME}/git/literate-k3s/clusters/<<CLUSTER>>
  kubectl --kubeconfig=<<KUBE_CONFIG>>
  #+end_src
 
+* Create directories for namespaces
+Create all of the directories necessary for tangling this config. (These are
+also re-iterated in the setup instructions for each individual config below, but
+this gets you going quicker, because tangling will fail until you create all of
+these):
+
+#+begin_src shell :noweb yes :eval never-export :exports code
+mkdir -p <<SRC_DIR>>/kube-system/traefik
+mkdir -p <<SRC_DIR>>/git-system/gitea
+mkdir -p <<SRC_DIR>>/flux-system
+#+end_src
+
 * kube-system
 =kube-system= is the namespace for running system wide features, mostly network
 related. 
+** Traefik Config
+*** TRAEFIK_ACME_EMAIL
+  =TRAEFIK_ACME_EMAIL= is the email address to register with the ACME service
+  provider. 
+ #+name: TRAEFIK_ACME_EMAIL
+ #+begin_src config :eval no
+ you@example.com
+ #+end_src
+*** TRAEFIK_ACME_SERVER
+ =TRAEFIK_ACME_SERVER= is the URL for the Let's Encrypt API (Or other ACME
+ provider). 
+ #+name: TRAEFIK_ACME_SERVER
+ #+begin_src config :eval no
+ https://acme-staging-v02.api.letsencrypt.org/directory
+ #+end_src
+
+ For production, use the =acme-v02= Lets Encrypt server :
+
+ : https://acme-v02.api.letsencrypt.org/directory
+
+ For staging, use the =acme-staging-v02= Let's Encrypt server :
+
+ : https://acme-staging-v02.api.letsencrypt.org/directory
+
+ The difference, is that the staging server has much more generous [[https://letsencrypt.org/docs/rate-limits/][rate limiting]],
+ but will only provide certificates for testing purposes (ie, they appear INVALID
+ in web browsers.) You really should start with the staging server for new
+ deployments, because you may find you need to recreate the whole server a few
+ times, and if you don't backup and restore the =acme.json= file that Traefik
+ needs, it will request the certificates be issued again, incurring the wrath of
+ the rate limit, which blocks you out for a week.
+
+*** TRAEFIK_WHOAMI_DOMAIN
+ [[https://github.com/traefik/whoami][traefik/whoami]] can be deployed to test Traefik functionality. It needs its own
+ domain name to respond to. =TRAEFIK_WHOAMI_DOMAIN= is the subdomain that the
+ whoami service responds to.
+ #+name: TRAEFIK_WHOAMI_DOMAIN
+ #+begin_src config :noweb yes :eval no
+ whoami.<<CLUSTER>>
+ #+end_src
+*** TRAEFIK_VERSION
+ The version number of Traefik to install (eg. =2.3=).
+ #+name: TRAEFIK_VERSION
+ #+begin_src config :eval no
+ v2.3
+ #+end_src
+*** TRAEFIK_LOG_LEVEL
+ =TRAEFIK_LOG_LEVEL= is the filter level on the traefik log.
+ #+name: TRAEFIK_LOG_LEVEL
+ #+begin_src config :eval no
+ INFO
+ #+end_src
+** Traefik Deployment
 #+INCLUDE: "../../lib/traefik.org"
+** Sealed Secrets
 #+INCLUDE: "../../lib/sealed_secrets.org"
 * git-system
 =git-system= is the namespace created for Gitea.
+** Gitea Config
+*** GITEA_DOMAIN
+#+name: GITEA_DOMAIN
+#+begin_src config :noweb yes :eval no
+git.<<CLUSTER>>
+#+end_src
+*** GITEA_POSTGRES_PVC_SIZE
+The size of the postgres database volume for gitea:
+#+name: GITEA_POSTGRES_PVC_SIZE
+#+begin_src config :noweb yes :eval no
+5Gi
+#+end_src
+*** GITEA_PVC_SIZE
+The size of the data volume for gitea:
+#+name: GITEA_PVC_SIZE
+#+begin_src config :noweb yes :eval no
+5Gi
+#+end_src
+*** GITEA_USER
+=GITEA_USER= is the admin account name to create. Note: =admin= is a reserved
+name.
+#+name: GITEA_USER
+#+begin_src config :noweb yes :eval no
+root
+#+end_src
+*** GITEA_EMAIL
+=GITEA_EMAIL= is the admin account email address:
+#+name: GITEA_EMAIL
+#+begin_src config :noweb yes :eval no
+root@example.com
+#+end_src
+** Gitea Deployment
 #+INCLUDE: "../../lib/gitea.org"
 * flux-system
 #+INCLUDE: "../../lib/flux.org"
